apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: homepage-data
              mountPath: /app/config

            - name: homepage-config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
              
            - name: homepage-services
              mountPath: /app/config/services.yaml
              subPath: services.yaml
              
      volumes:
        - name: homepage-data
          emptyDir: {}

        - name: homepage-config
          configMap:
            name: homepage-config

        - name: homepage-services
          configMap:
            name: homepage-services
